update sample taking workflow UI, re #968

--- a/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-sample-location-step.htm
+++ b/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-sample-location-step.htm
@@ -36,99 +36,98 @@
     <div data-bind="css: card.model.cssclass">
         <div class="new-provisional-edit-card-container">
             <div class="card">
-                <div style="padding: 10px 0; margin-top: 10px;">
-                    <h5>{% trans 'Sample locations' %}</h5>
-            
-                    <div style="margin-left: 5px; margin-right: 15px;">
-                        <input 
-                            type="text" 
-                            placeholder="{% trans 'filter...' %}"
-                            style="
-                                width: 100%;
-                                height: 36px;
-                                border: 1px solid #ddd;
-                                margin-bottom: 3px;
-                            "
-                            data-bind="textInput: $data.sampleLocationFilterTerm"
-                        >
+                <div style="display: flex; gap: 10px">
+                    <button type="button" class="btn" style="
+                            background: #9490EE;
+                            color: #eee;
+                        " data-bind="
+                            click: $data.loadNewSampleLocationTile,
+                            attr: {
+                                class: ( $data.selectedSampleLocationInstance() && !$data.selectedSampleLocationInstance().tileid ) ? 'btn disabled' : 'btn'
+                            }
+                        ">
+                        <i class="fa fa-folder"></i>
+                        <span>
+                            {% trans 'Add New Sample' %}
+                        </span>
+                    </button>
 
-                        <div
-                            style="
-                                height: 100px;
-                                border: 1px solid #ddd;
-                                overflow-y: scroll;
-                            "
-                        >
-                            <table
-                                style="
+                    <!-- ko if: sampleLocationInstances().length > 0 -->
+                    <button type="button" class="btn" style="
+                            background: #9490EE;
+                            color: #eee;
+                        " data-bind="click: showSampleList">
+                        <i class="fa fa-folder"></i>
+                        <span>
+                            <!-- ko ifnot: sampleListShowing -->
+                            {% trans 'Show List of Samples' %}
+                            <!-- /ko -->
+
+                            <!-- ko if: sampleListShowing -->
+                            {% trans 'Hide List of Samples' %}
+                            <!-- /ko -->
+                        </span>
+                    </button>
+                    <!-- /ko -->
+                </div>
+
+                <div style="overflow: hidden; height: 0px; transition: height .3s;"
+                    data-bind="style: {height: sampleListShowing() ? '185px': '0px'}">
+                    <h5>{% trans 'Sample locations' %}</h5>
+                
+                    <div style="margin-left: 5px; margin-right: 15px;">
+                        <input type="text" placeholder="{% trans 'filter...' %}" style="
+                            width: 100%;
+                            height: 36px;
+                            border: 1px solid #ddd;
+                            margin-bottom: 3px;
+                        " data-bind="textInput: $data.sampleLocationFilterTerm">
+                
+                        <div style="height: 100px;border: 1px solid #ddd;overflow-y: scroll;"> 
+                            <table style="
                                     display: flex;
                                     flex-direction: column;
                                     width: 100%;
-                                "
-                            >
-                                <tbody
-                                    class="dataset-table"
-                                    style="
-                                        display: flex;
-                                        flex-direction: column;
-                                    "
-                                >
+                                ">
+                                <tbody class="dataset-table" style="
+                                                        display: flex;
+                                                        flex-direction: column;
+                                                    ">
                                     <!-- ko foreach: $data.filteredSampleLocationInstances -->
-                                        <tr
-                                            style="cursor: pointer;"
-                                            data-bind="
-                                                scrollTo: $parent.selectedSampleLocationInstance() && $parent.selectedSampleLocationInstance().tileid === $data.tileid,
-                                                click: function() { $parent.selectSampleLocationInstance($data); },
-                                                style: {
-                                                    background: (function() {
-                                                        if ($parent.selectedSampleLocationInstance() && $parent.selectedSampleLocationInstance().tileid === $data.tileid) {
-                                                            return '#afd7f7';
-                                                        }
-                                                    })()
-                                                },
-                                            "
-                                        >
-                                            <td class="afs-workflow-table-contents"
-                                                data-bind="text: (function(){
-                                                    var partIdentifierAssignmentLabelNodeId = '3e541cc6-859b-11ea-97eb-acde48001122';
-                                                    return $data.data[partIdentifierAssignmentLabelNodeId]() + ' [Sample of ' + $parent.physicalThingName + ']';
-                                                })()"
-                                                style="width: 100%"
-                                            ></td>
-                                            <td data-bind="if: $parent.samplingActivityResourceId != $data.samplingActivityResourceId()"><i class="fa fa-lock"></i></td>
-                                        </tr>
+                                    <tr style="cursor: pointer;" data-bind="
+                                                                scrollTo: $parent.selectedSampleLocationInstance() && $parent.selectedSampleLocationInstance().tileid === $data.tileid,
+                                                                style: {
+                                                                    background: (function() {
+                                                                        if ($parent.selectedSampleLocationInstance() && $parent.selectedSampleLocationInstance().tileid === $data.tileid) {
+                                                                            return '#afd7f7';
+                                                                        }
+                                                                    })()
+                                                                },
+                                                            ">
+                                        <td class="map-card-feature-tool">
+                                            <a href="javascript:void(0);"
+                                                data-bind="click: function() { $parent.selectSampleLocationInstance($data); }, clickBubble: false">
+                                                <i class="fa fa-pencil map-card-feature-edit"></i>
+                                                {% trans "Edit" %}
+                                            </a>
+                                        </td>
+                                        <td class="afs-workflow-table-contents" data-bind="text: (function(){
+                                                                    var partIdentifierAssignmentLabelNodeId = '3e541cc6-859b-11ea-97eb-acde48001122';
+                                                                    return $data.data[partIdentifierAssignmentLabelNodeId]() + ' [Sample of ' + $parent.physicalThingName + ']';
+                                                                })()" style="width: 100%"></td>
+                                        <td data-bind="if: $parent.samplingActivityResourceId != $data.samplingActivityResourceId()"><i
+                                                class="fa fa-lock"></i></td>
+                                    </tr>
                                     <!-- /ko -->
                                 </tbody>
                             </table>
                         </div>
-        
-                        <button
-                            type="button"
-                            class="btn"
-                            style="
-                                margin-top: 6px;
-                                background: #9490EE;
-                                color: #eee;
-                                width: 100%;
-                            "
-                            data-bind="
-                                click: $data.loadNewSampleLocationTile,
-                                attr: {
-                                    class: ( $data.selectedSampleLocationInstance() && !$data.selectedSampleLocationInstance().tileid ) ? 'btn disabled' : 'btn'
-                                }
-                            "
-                        >
-                            <i class="fa fa-folder"></i>
-                            <span>
-                                {% trans 'Add New Sample' %}
-                            </span>
-                        </button>
+                
                     </div>
                 </div>
 
-                <!-- ko if: $data.selectedSampleLocationInstance() -->
                 {% block form_widgets %}
-                    <form class="widgets" style="margin-bottom: 20px; margin-top: 10px; margin-left: 5px;">
+                    <form class="widgets" data-bind="style: {opacity: $data.selectedSampleLocationInstance() ? '1' : '0'}" style="transition: opacity 1s; margin-bottom: 20px; margin-top: 10px; margin-left: 5px; opacity: 0;">
                         <!-- BEGIN geometry table -->
                         <div data-bind="foreach: {
                             data:card.widgets, as: 'widget'
@@ -384,7 +383,7 @@
                         <!-- END motivation for sampling -->
                     </form>
                 {% endblock form_widgets %}
-                <!-- /ko -->
+
 
             </div>
         </div>
