Strip html tags function from phys-thing descriptions #961

--- a/afs/templates/views/components/reports/project.htm
+++ b/afs/templates/views/components/reports/project.htm
@@ -93,7 +93,7 @@
                                             <tr class="afs-table-header">
                                                 <th>{% trans "Project" %}</th>
                                                 <th class="min-tabletl">{% trans "Description" %}</th>
-                                                <th class="afs-table-control all">{% trans "Visit Resource" %}</th>
+                                                <th class="afs-table-control all"></th>
                                             </tr>
                                         </thead>
                                         <tbody data-bind="dataTablesForEach: { data: collectionOfChildProjects, dataTableOptions: childProjectTableConfig }">
