replace style with class, re #968

--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -881,3 +881,11 @@
     position: absolute;
     z-index: 100000001;
 }
+
+.afs-sample-location-form-widgets {
+    transition: opacity 1s;
+    margin-bottom: 20px;
+    margin-top: 10px;
+    margin-left: 5px;
+    opacity: 0;
+}
