--- a/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-sample-location-step.htm
+++ b/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-sample-location-step.htm
@@ -111,9 +111,9 @@
                                             </a>
                                         </td>
                                         <td class="afs-workflow-table-contents" data-bind="text: (function(){
-                                                                    var partIdentifierAssignmentLabelNodeId = '3e541cc6-859b-11ea-97eb-acde48001122';
-                                                                    return $data.data[partIdentifierAssignmentLabelNodeId]() + ' [Sample of ' + $parent.physicalThingName + ']';
-                                                                })()" style="width: 100%"></td>
+                                            var partIdentifierAssignmentLabelNodeId = '3e541cc6-859b-11ea-97eb-acde48001122';
+                                            return $data.data[partIdentifierAssignmentLabelNodeId]() + ' [Sample of ' + $parent.physicalThingName + ']';
+                                        })()" style="width: 100%"></td>
                                         <td data-bind="if: $parent.samplingActivityResourceId != $data.samplingActivityResourceId()"><i
                                                 class="fa fa-lock"></i></td>
                                     </tr>
@@ -126,8 +126,7 @@
                 </div>
 
                 {% block form_widgets %}
-                    <form class="widgets" data-bind="style: {opacity: $data.selectedSampleLocationInstance() ? '1' : '0'}" 
-                        style="transition: opacity 1s; margin-bottom: 20px; margin-top: 10px; margin-left: 5px; opacity: 0;">
+                    <form class="widgets afs-sample-location-form-widgets" data-bind="style: {opacity: $data.selectedSampleLocationInstance() && !sampleListShowing() ? '1' : '0'}">
                         <!-- BEGIN geometry table -->
                         <div data-bind="foreach: {
                             data:card.widgets, as: 'widget'
