Styling, helper functions, and more descriptive place-holder text #960

--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -881,3 +881,10 @@
     position: absolute;
     z-index: 100000001;
 }
+
+.afs-report-page .display-description {
+        max-width: 40vw;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+}
