--- a/afs/templates/views/components/reports/group.htm
+++ b/afs/templates/views/components/reports/group.htm
@@ -140,7 +140,7 @@
                     <div data-bind="visible: visible.largerEntities" class="afs-report-collapsible-container pad-lft">
 
                         <!-- ko ifnot: collectionOfLargerEntities().length -->
-                        <div class="afs-nodata-note">No people or sub-groups associated with this group.</div>
+                        <div class="afs-nodata-note">No larger entities associated with this group.</div>
                         <!-- /ko -->
                         
                         <!-- ko if: collectionOfLargerEntities().length -->
