--- a/afs/templates/views/components/reports/scenes/documentation.htm
+++ b/afs/templates/views/components/reports/scenes/documentation.htm
@@ -76,6 +76,54 @@
         <!-- /ko -->
     </div>
 </div>
+<div data-bind="if: textualReferenceDisplay" class="afs-report-section">
+    <h2 class="afs-report-section-title"><i data-bind="click: function() {toggleVisibility(visible.textualReference)}, css: {'fa-angle-double-right': visible.textualReference(), 'fa-angle-double-up': !visible.textualReference()}" class="fa toggle"></i> {% trans "Textual Reference" %}</h2>
+    <span data-bind="if: cards.textualReference && (!textualReference().length || cards.textualReference.cardinality == 'n')">
+        <a class="afs-report-a" data-bind="click: function(){add(cards.textualReference)}"><i class="fa fa-mail-reply"></i> {% trans "Add Textual Reference" %}</a>
+    </span>
+
+    <!-- Collapsible content -->
+    <div data-bind="visible: visible.textualReference" class="afs-report-collapsible-container pad-lft">
+
+        <!-- ko ifnot: textualReference().length -->
+        <div class="afs-nodata-note">No textual references for this resource</div>
+        <!-- /ko -->
+        
+        <!-- ko if: textualReference().length -->
+        <div class="afs-report-subsection" >
+            <div class="firstchild-container">
+                <div class="afs-table pad-btm">
+                    <table class="table table-striped" cells pacing="0" width="100%">
+                        <thead>
+                            <tr class="afs-table-header">
+                                <th class="min-tabletl">{% trans "Type" %}</th>
+                                <th>{% trans "Source" %}</th>
+                                <th class="afs-table-control all"></th>
+                            </tr>
+                        </thead>
+                        <tbody data-bind="dataTablesForEach: { data: textualReference, dataTableOptions: textualReferenceTableConfig }">
+                            <tr>
+                                <td data-bind="text: type"></td>
+                                <td><a class="afs-block-value-url" data-bind="text: source, attr: {href: link}"></a></td>
+                                <td class="afs-table-control">
+                                    <div data-bind="if: $parent.cards && $parent.cards.textualReference">
+                                        <a data-bind="click: function() {$parent.edit(tileid, $parent.cards.textualReference)}">
+                                            <i class="fa fa-mail-reply"></i>
+                                        </a>
+                                        <a data-bind="click: $parent.delete.bind($data, tileid, $parent.cards.textualReference)">
+                                            <i class="fa fa-trash"></i>
+                                        </a>
+                                    </div>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+        <!-- /ko -->
+    </div>
+</div>
 <div data-bind="if: subjectOfDisplay" class="afs-report-section">
     <h2 class="afs-report-section-title"><i data-bind="click: function() {toggleVisibility(visible.subjectOf)}, css: {'fa-angle-double-right': visible.subjectOf(), 'fa-angle-double-up': !visible.subjectOf()}" class="fa toggle"></i> {% trans "Subject Of" %}</h2>
     <span data-bind="if: cards.subjectOf">
