--- a/afs/templates/views/components/reports/instrument.htm
+++ b/afs/templates/views/components/reports/instrument.htm
@@ -55,9 +55,57 @@
                         data: resource,
                         cards: documentationCards,
                         dataConfig: documentationDataConfig
-
                     }
                 }"></div>
+                <div class="afs-report-section">
+                    <h2 class="afs-report-section-title"><i data-bind="click: function() {toggleVisibility(visible.textualReference)}, css: {'fa-angle-double-right': visible.textualReference(), 'fa-angle-double-up': !visible.textualReference()}" class="fa toggle"></i> {% trans "Textual Reference" %}</h2>
+                    <span data-bind="if: cards['textual reference to instrument'] && (!textualReference().length || cards['textual reference to instrument'].cardinality == 'n')">
+                        <a class="afs-report-a" data-bind="click: function(){addNewTile(cards['textual reference to instrument'])}"><i class="fa fa-mail-reply"></i> {% trans "Add Textual Reference" %}</a>
+                    </span>
+                
+                    <!-- Collapsible content -->
+                    <div data-bind="visible: visible.textualReference" class="afs-report-collapsible-container pad-lft">
+                
+                        <!-- ko ifnot: textualReference().length -->
+                        <div class="afs-nodata-note">No textual references for this resource</div>
+                        <!-- /ko -->
+                        
+                        <!-- ko if: textualReference().length -->
+                        <div class="afs-report-subsection" >
+                            <div class="firstchild-container">
+                                <div class="afs-table pad-btm">
+                                    <table class="table table-striped" cells pacing="0" width="100%">
+                                        <thead>
+                                            <tr class="afs-table-header">
+                                                <th class="min-tabletl">{% trans "Type" %}</th>
+                                                <th>{% trans "Source" %}</th>
+                                                <th class="afs-table-control all"></th>
+                                            </tr>
+                                        </thead>
+                                        <tbody data-bind="dataTablesForEach: { data: textualReference, dataTableOptions: textualReferenceTableConfig }">
+                                            <tr>
+                                                <td data-bind="text: type"></td>
+                                                <td><a class="afs-block-value-url" data-bind="text: source, attr: {href: link}"></a></td>
+                                                <td class="afs-table-control">
+                                                    <div data-bind="if: $parent.cards && $parent.cards['textual reference to instrument']">
+                                                        <a data-bind="click: function() {$parent.editTile(tileid, $parent.cards['textual reference to instrument'])}">
+                                                            <i class="fa fa-mail-reply"></i>
+                                                        </a>
+                                                        <a data-bind="click: $parent.deleteTile.bind($data, tileid, $parent.cards['textual reference to instrument'])">
+                                                            <i class="fa fa-trash"></i>
+                                                        </a>
+                                                    </div>
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- /ko -->
+                    </div>
+                </div>
+                
             </div>
            <!-- Actor Tab -->
            <div class="afs-report-page" data-bind="if: activeSection() === 'actor-relations'">
