--- a/afs/templates/javascript.htm
+++ b/afs/templates/javascript.htm
@@ -26,6 +26,7 @@
 {% block urls %}
     physical_thing_search_results: "{% url 'physical-thing-search-results' %}",
     physical_things_set: "{% url 'physical_things_set' %}",
+    upload_dataset_select_dataset_files_step: "{% url 'upload_dataset_select_dataset_files_step' %}"
 {% endblock urls %}
 
 {% block project_modules %}
