--- a/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-sample-location-step.htm
+++ b/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-sample-location-step.htm
@@ -31,7 +31,7 @@
         <h4 class="workbench-card-sidepanel-header" data-bind="click: hideSidePanel, text: 'Sample Details'"></h4>
     </div>
     <div class="workbench-card-sidepanel-border"></div>
-<div class="workbench-card-sidepanel-body">
+<div class="workbench-card-sidepanel-body" style="overflow-y: hidden;">
 
     <div data-bind="css: card.model.cssclass">
         <div class="new-provisional-edit-card-container">
@@ -72,18 +72,19 @@
                 </div>
 
                 <div style="overflow: hidden; height: 0px; transition: height .3s;"
-                    data-bind="style: {height: sampleListShowing() ? '185px': '0px'}">
+                    data-bind="style: {height: sampleListShowing() ? '585px': '0px'}">
                     <h5>{% trans 'Sample locations' %}</h5>
                 
                     <div style="margin-left: 5px; margin-right: 15px;">
                         <input type="text" placeholder="{% trans 'filter...' %}" style="
                             width: 100%;
+                            padding: 0px 5px;
                             height: 36px;
                             border: 1px solid #ddd;
                             margin-bottom: 3px;
                         " data-bind="textInput: $data.sampleLocationFilterTerm">
                 
-                        <div style="height: 100px;border: 1px solid #ddd;overflow-y: scroll;"> 
+                        <div style="height: 320px;border: 1px solid #ddd;overflow-y: scroll;"> 
                             <table style="
                                     display: flex;
                                     flex-direction: column;
@@ -103,19 +104,29 @@
                                             })()
                                         },
                                     ">
-                                        <td style="cursor: pointer;" class="map-card-feature-tool">
+                                        <td style="cursor: pointer;" class="iiif-card-feature-tool">
                                             <a href="javascript:void(0);"
                                                 data-bind="click: function() { $parent.selectSampleLocationInstance($data); }, clickBubble: false">
-                                                <i class="fa fa-pencil map-card-feature-edit"></i>
-                                                {% trans "Edit" %}
+                                                <i class="fa fa-pencil iiif-card-feature-edit"></i>
                                             </a>
                                         </td>
+
+                                        <!-- To Do: wire up delete functionality  -->
+                                        <td style="cursor: pointer;" class="iiif-card-feature-tool">
+                                            <a href="javascript:void(0);"
+                                                data-bind="">
+                                                <i class="fa fa-trash iiif-card-feature-edit"></i>
+                                            </a>
+                                        </td>
+
                                         <td class="afs-workflow-table-contents" data-bind="text: (function(){
                                             var partIdentifierAssignmentLabelNodeId = '3e541cc6-859b-11ea-97eb-acde48001122';
                                             return $data.data[partIdentifierAssignmentLabelNodeId]() + ' [Sample of ' + $parent.physicalThingName + ']';
-                                        })()" style="width: 100%"></td>
-                                        <td data-bind="if: $parent.samplingActivityResourceId != $data.samplingActivityResourceId()"><i
-                                                class="fa fa-lock"></i></td>
+                                        })()" style="width: 100%; padding: 0px 5px;"></td>
+                                        
+                                        <td class="iiif-card-feature-tool" data-bind="if: $parent.samplingActivityResourceId != $data.samplingActivityResourceId()"><i
+                                                class="fa fa-lock"></i>
+                                        </td>
                                     </tr>
                                     <!-- /ko -->
                                 </tbody>
@@ -138,12 +149,12 @@
 
                             <i style="display: none;" data-bind="css: {'ion-asterisk widget-label-required': self.form.nodeLookup[widget.node_id()].isrequired}"></i>
 
-                            <div class="col-xs-12" style="width: 342px;">
-                                <div class="style-tools-collapser" data-bind=" click: function() {
+                            <div class="col-xs-12" style="width: 342px; margin-top: -20px;">
+                                <div class="style-tools-collapser" style="display: flex; flex-direction: row-reverse;" data-bind=" click: function() {
                                     self.showStylingTools(!self.showStylingTools());
                                 }">
                                     <span data-bind="text: self.showStylingTools() ? '{% trans "Hide Style Tools" %}' : '{% trans "Show Style Tools" %}'"></span>
-                                    <i class="fa" data-bind="{
+                                    <i style="padding: 0px 3px; margin-top: 4px;" class="fa" data-bind="{
                                         css: {
                                             'fa-caret-down' : !self.showStylingTools(),
                                             'fa-caret-up' : self.showStylingTools(),
